# agentcore-memory-viz

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml
aidlc-docs/: aidlc-state.md  audit.md
backend/: Dockerfile  main.py  pyproject.toml
backend/api/: schemas.py
backend/api/routers/: _identifiers.py  actors.py  agent_runtimes.py  events.py  memories.py  memory_records.py  sessions.py
backend/application/: actor_service.py  agent_runtime_service.py  event_service.py  memory_record_service.py  memory_service.py  session_service.py
backend/domain/: agent_runtime.py  event.py  memory.py  memory_record.py  memory_resource.py  session.py
backend/infrastructure/: agentcore_client.py  cache.py
backend/tests/features/: list_events.feature  list_memories.feature  list_memory_records.feature  list_sessions.feature
backend/tests/features/steps/: test_list_events.py  test_list_memories.py  test_list_memory_records.py  test_list_sessions.py
backend/tests/unit/: test_actor_service.py  test_actors_router.py  test_agent_runtime_service.py  test_agent_runtimes_router.py  test_agentcore_repository.py  test_event_service.py  test_events_router.py  test_memory_record_service.py  test_memory_service.py  test_session_service.py  test_sessions_router.py
docs/plans/: 2026-03-17-initial-setup.md  2026-03-18-agentcore-memory-wiring.md  2026-03-19-frontend-data-visualization-refactor.md
frontend/: cucumber.json  jest.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/src/app/: layout.tsx  (+1 more)
(+46 files in other folders)
