[project]
name = "agentcore-memory-viz-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.42.70",
    "diskcache>=5.6.3",
    "fastapi>=0.128.8",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.39.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-bdd>=8.1.0",
]
